[metadata]
name = alignak_module_backend
summary = Alignak module for Alignak Backend API
author =
author_email =
license = GNU Affero General Public License
url = https://github.com/Alignak-monitoring/mod-alignakbackend
description-file =
    README.md

[files]
data_files =
    etc/ = etc/*

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
